unpackaged/main/default/objects/Contact/fields/Country_Remit__c.field-meta.xml
<CustomField>
    <fullName>Country_Remit__c</fullName>
    <description>Space to store the countries this person operates in</description>
    <label>Country Remit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Picklist</valueSetName>
    </valueSet>
</CustomField>