unpackaged/main/default/objects/Contact/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <description>Space to store a link to their linked in page</description>
    <label>LinkedIn Profile</label>
    <type>Url</type>
</CustomField>