unpackaged/main/default/objects/Contact/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Specify the main location type this person works in</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Countryside</fullName>
            </value>
            <value>
                <fullName>Urban</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>