unpackaged/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Additional details about the person's job role</description>
    <inlineHelpText>Additional details about the person's job role</inlineHelpText>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>