unpackaged/main/default/objects/Contact/fields/Social_Media_Profile__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Profile__c</fullName>
    <description>Space to store a link to their social media page</description>
    <label>Social Media Profile</label>
    <type>Url</type>
</CustomField>